--- a/pypicloud/files/nginx-pypicloud.jinja
+++ b/pypicloud/files/nginx-pypicloud.jinja
@@ -2,6 +2,6 @@ server {
     listen {{ port }};
     location {{ location }} {
         include uwsgi_params;
-        uwsgi_pass 127.0.0.1:3031;
+        uwsgi_pass 127.0.0.1:{{ uwsgi_port }};
     }
 }
